src/app/globals.css
@import "tailwindcss";
@import "@heroui/styles";

@theme {
  --color-primary: #000f22;
  --color-secondary: #855300;
  --color-secondary-container: #fea619;
  --color-background: #f7f9fb;
  --color-surface-dim: #d8dadc;
  --color-surface: #f7f9fb;
  --color-surface-container: #eceef0;
  --color-surface-container-low: #f2f4f6;
  --color-surface-container-high: #e6e8ea;
  --color-surface-container-highest: #e0e3e5;
  --color-on-surface: #191c1e;
  --color-on-surface-variant: #43474d;
  --color-primary-container: #0a2540;
  --color-on-primary: #ffffff;
  --color-on-secondary: #ffffff;
  --color-on-primary-container: #768dad;
  --color-on-primary-fixed: #001c37;
  --color-primary-fixed: #d2e4ff;
  --color-primary-fixed-dim: #b0c8eb;
  
  --spacing-container-max: 1280px;
  --spacing-lg: 40px;
  --spacing-md: 24px;
  --spacing-sm: 16px;
  --spacing-xs: 8px;
  --spacing-gutter: 24px;
  --spacing-base: 4px;
  --spacing-xl: 64px;
}

